--- a/.env
+++ b/.env
@@ -29,6 +29,13 @@ APP_SECRET=90d4097573ed8ce8f53526eb8b25ad22
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 # 
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root:@127.0.0.1:3308/petitesannonces?serverVersion=5.7"
+#DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+MAILER_DSN=smtp://localhost:1025
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+#MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
